--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/RelativeLayout1"
     android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    android:orientation="vertical" >
+    android:layout_height="fill_parent" >
 
     <FrameLayout
         android:id="@+id/header"
@@ -10,17 +10,20 @@
         android:layout_height="wrap_content" >
     </FrameLayout>
 
-    <LinearLayout
-        android:id="@+id/content"
+    <FrameLayout
+        android:id="@+id/footer"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical" >
-    </LinearLayout>
-
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true" >
+    </FrameLayout>
+
     <RelativeLayout
         android:id="@+id/navigation"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_above="@+id/footer"
+        android:layout_alignParentLeft="true"
         android:layout_margin="5dip"
         android:baselineAligned="true" >
 
@@ -41,12 +44,15 @@
             android:layout_alignParentTop="true"
             android:text="Button" />
     </RelativeLayout>
-
-    <FrameLayout
-        android:id="@+id/footer"
+
+    <LinearLayout
+        android:id="@+id/content"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="bottom" >
-    </FrameLayout>
+        android:layout_alignParentLeft="true"
+        android:layout_below="@+id/header"
+        android:orientation="vertical" >
 
-</LinearLayout>
+    </LinearLayout>
+
+</RelativeLayout>
