--- a/res/layout/choice_horizontal.xml
+++ b/res/layout/choice_horizontal.xml
@@ -22,7 +22,7 @@
             android:id="@+id/tableRow1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" >
-
+
             <TextView
                 android:id="@+id/radioText0"
                 android:layout_width="wrap_content"
@@ -30,7 +30,7 @@
                 android:layout_gravity="center_horizontal"
                 android:paddingLeft="@dimen/choiceHorizontalRadioSidePadding"
                 android:paddingRight="@dimen/choiceHorizontalRadioSidePadding"
-                android:text="TextView" />
+                android:text="TextView" android:gravity="center_horizontal" android:width="@dimen/choiceHorizontalRadioWidth"/>
 
             <TextView
                 android:id="@+id/radioText1"
@@ -39,7 +39,7 @@
                 android:layout_gravity="center_horizontal"
                 android:paddingLeft="@dimen/choiceHorizontalRadioSidePadding"
                 android:paddingRight="@dimen/choiceHorizontalRadioSidePadding"
-                android:text="TextView" />
+                android:text="TextView" android:gravity="center_horizontal" android:width="@dimen/choiceHorizontalRadioWidth"/>
 
             <TextView
                 android:id="@+id/radioText2"
@@ -48,7 +48,7 @@
                 android:layout_gravity="center_horizontal"
                 android:paddingLeft="@dimen/choiceHorizontalRadioSidePadding"
                 android:paddingRight="@dimen/choiceHorizontalRadioSidePadding"
-                android:text="TextView" />
+                android:text="TextView" android:gravity="center_horizontal" android:width="@dimen/choiceHorizontalRadioWidth"/>
 
             <TextView
                 android:id="@+id/radioText3"
@@ -57,7 +57,7 @@
                 android:layout_gravity="center_horizontal"
                 android:paddingLeft="@dimen/choiceHorizontalRadioSidePadding"
                 android:paddingRight="@dimen/choiceHorizontalRadioSidePadding"
-                android:text="TextView" />
+                android:text="TextView" android:gravity="center_horizontal" android:width="@dimen/choiceHorizontalRadioWidth"/>
 
             <TextView
                 android:id="@+id/radioText4"
@@ -66,7 +66,7 @@
                 android:layout_gravity="center_horizontal"
                 android:paddingLeft="@dimen/choiceHorizontalRadioSidePadding"
                 android:paddingRight="@dimen/choiceHorizontalRadioSidePadding"
-                android:text="TextView" />
+                android:text="TextView" android:gravity="center_horizontal" android:width="@dimen/choiceHorizontalRadioWidth"/>
         </TableRow>
 
         <TableRow
